fix goto btn on mobile

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -56,6 +56,12 @@ footer
   border-radius: 100%
   height: 25px
   width: 25px
+  +screen(mobile)
+    margin: 10px
+    padding: 20px
+    a
+      padding-top: 8px
+      padding-right: 14px
   a
     margin-top: 8px
     color: $white
